perf(backend): 提高性能安全